--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo applicationcustomizer add
 
-Add an application customizer to a site.
+Add an application customizer to a site
 
 ## Usage
 
@@ -23,7 +23,7 @@ m365 spo applicationcustomizer add [options]
 : Client-side component ID of the application customizer (GUID).
 
 `--clientSideComponentProperties [clientSideComponentProperties]`
-: JSON string with application customizer properties
+: JSON string with application customizer properties.
 
 `-s, --scope [scope]`
 : Scope of the application customizer. Allowed values: `Site`, `Web`. Defaults to `Site`.
