--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
@@ -55,13 +55,13 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 ## Examples
 
-Updates the title of an application customizer on the sales site
+Updates the title of an application customizer on the sales site.
 
 ```sh
 m365 spo applicationcustomizer set --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --newTitle "Some customizer" --webUrl https://contoso.sharepoint.com/sites/sales
 ```
 
-Updates the properties of an application customizer on the sales site
+Updates the properties of an application customizer on the sales site.
 
 ```sh
 m365 spo applicationcustomizer set --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --clientSideComponentProperties '{ "testMessage": "Test message" }' --webUrl https://contoso.sharepoint.com/sites/sales
