--- a/docs/docs/cmd/spo/commandset/commandset-add.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-add.mdx
@@ -16,13 +16,13 @@ m365 spo commandset add [options]
 
 ```md definition-list
 `-t, --title <title>`
-: The title of the ListView Command Set
+: The title of the ListView Command Set.
 
 `-u, --webUrl <webUrl>`
 : The site to add the ListView Command Set.
 
 `-l, --listType <listType>`
-: The list or library type to register the Command Set on. Allowed values `List`, `Library` or `SitePages`.
+: The list or library type to register the Command Set on. Allowed values are: `List`, `Library` or `SitePages`.
 
 `-i, --clientSideComponentId <clientSideComponentId>`
 : The Client Side Component Id (GUID) of the ListView Command Set.
@@ -31,10 +31,10 @@ m365 spo commandset add [options]
 : The Client Side Component properties of the ListView Command Set.
 
 `-s, --scope [scope]`
-: Scope of the ListView Command Set. Allowed values: `Site`, `Web`. Defaults to `Web`.
+: Scope of the ListView Command Set. Allowed values are: `Site`, `Web`. Defaults to `Web`.
 
 `--location [location]`
-: The location of the ListView Command Set. Allowed values `ContextMenu`, `CommandBar` or `Both`. Defaults to `CommandBar`.
+: The location of the ListView Command Set. Allowed values are: `ContextMenu`, `CommandBar` or `Both`. Defaults to `CommandBar`.
 ```
 
 <Global />
