--- a/docs/docs/cmd/spo/commandset/commandset-remove.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-remove.mdx
@@ -26,10 +26,10 @@ m365 spo commandset remove [options]
 : The id of the ListView Command Set. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-s, --scope [scope]`
-: Scope of the ListView Command Set. Allowed values: `Site`, `Web`, `All`. Defaults to `All`.
+: Scope of the ListView Command Set. Allowed values are: `Site`, `Web`, `All`. Defaults to `All`.
 
 `-f, --force`
-: Don't prompt for confirming removal of the ListView Command Set
+: Don't prompt for confirming removal of the ListView Command Set.
 ```
 
 <Global />
