--- a/docs/docs/cmd/spo/commandset/commandset-set.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-set.mdx
@@ -32,16 +32,16 @@ m365 spo commandset set [options]
 : The new title of the ListView Command Set.
 
 `-l, --listType [listType]`
-: The list or library type to register the Command Set on. Allowed values `List`, `Library` or `SitePages`.
+: The list or library type to register the Command Set on. Allowed values are: `List`, `Library` or `SitePages`.
 
 `--clientSideComponentProperties [clientSideComponentProperties]`
 : The Client Side Component properties of the ListView Command Set.
 
 `-s, --scope [scope]`
-: The scope where to lookup the ListView Command Set: at site level or web level. Allowed values: `Site`, `Web`, `All`. Defaults to `All`.
+: The scope where to lookup the ListView Command Set: at site level or web level. Allowed values are: `Site`, `Web`, `All`. Defaults to `All`.
 
 `--location [location]`
-: The location of the ListView Command Set. Allowed values `ContextMenu`, `CommandBar` or `Both`.
+: The location of the ListView Command Set. Allowed values are: `ContextMenu`, `CommandBar` or `Both`.
 ```
 
 <Global />
