--- a/docs/docs/cmd/spo/contenttypehub/contenttypehub-get.mdx
+++ b/docs/docs/cmd/spo/contenttypehub/contenttypehub-get.mdx
@@ -21,3 +21,45 @@ Retrieve the Content Type Hub URL
 ```sh
 m365 spo contenttypehub get
 ```
+
+## Response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  {
+    "ContentTypePublishingHub": "https://contoso.sharepoint.com/sites/contentTypeHub"
+  }
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  ContentTypePublishingHub: https://contoso.sharepoint.com/sites/contentTypeHub
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  ContentTypePublishingHub
+  https://contoso.sharepoint.com/sites/contentTypeHub
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  # spo contenttypehub get
+
+  Date: 10/2/2023
+
+  Property | Value
+  ---------|-------
+  ContentTypePublishingHub | https://contoso.sharepoint.com/sites/contentTypeHub
+  ```
+
+  </TabItem>
+</Tabs>
