--- a/docs/docs/cmd/spo/customaction/customaction-clear.mdx
+++ b/docs/docs/cmd/spo/customaction/customaction-clear.mdx
@@ -14,34 +14,37 @@ m365 spo customaction clear [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: Url of the site or site collection to clear the custom actions from
+: Url of the site or site collection to clear the custom actions from.
 
 `-s, --scope [scope]`
-: Scope of the custom action. Allowed values `Site`, `Web`, `All`. Default `All`
+: Scope of the custom action. Allowed values `Site`, `Web`, `All`. Default `All`.
 
 `-f, --force`
-: Don't prompt for confirming removing all custom actions
+: Don't prompt for confirming removing all custom actions.
 ```
 
 <Global />
 
 ## Examples
 
-Clears all user custom actions for both site and site collection _https://contoso.sharepoint.com/sites/test_.
-Skips the confirmation prompt message.
+Clears all user custom actions for both site and site collection. Skips the confirmation prompt message.
 
 ```sh
 m365 spo customaction clear --webUrl https://contoso.sharepoint.com/sites/test --force
 ```
 
-Clears all user custom actions for site _https://contoso.sharepoint.com/sites/test_. 
+Clears all user custom actions for the specified site. 
 
 ```sh
 m365 spo customaction clear --webUrl https://contoso.sharepoint.com/sites/test --scope Web
 ```
 
-Clears all user custom actions for site collection _https://contoso.sharepoint.com/sites/test_
+Clears all user custom actions for the specified site collection.
 
 ```sh
 m365 spo customaction clear --webUrl https://contoso.sharepoint.com/sites/test --scope Site
 ```
+
+## Response
+
+The command won't return a response on success.
