--- a/docs/docs/cmd/spo/eventreceiver/eventreceiver-remove.mdx
+++ b/docs/docs/cmd/spo/eventreceiver/eventreceiver-remove.mdx
@@ -79,3 +79,7 @@ Remove event receiver in a specific list retrieved by list url by name.
 ```sh
 m365 spo eventreceiver remove --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listUrl '/sites/contoso-sales/lists/Events' --name 'PnP Test Receiver'
 ```
+
+## Response
+
+The command won't return a response on success.
