--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo applicationcustomizer get
 
-Get an application customizer that is added to a site.
+Get an application customizer that is added to a site
 
 ## Usage
 
@@ -19,13 +19,13 @@ m365 spo applicationcustomizer get [options]
 : URL of the site.
 
 `-t, --title [title]`
-: The title of the Application Customizer. Specify either `title`, `id`, or `clientSideComponentId`.
+: The title of the Application Customizer. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-i, --id [id]`
-: The id of the Application Customizer. Specify either `title`, `id`, or `clientSideComponentId`.
+: The id of the Application Customizer. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-c, --clientSideComponentId  [clientSideComponentId]`
-: The Client Side Component Id (GUID) of the application customizer. Specify either `title`, `id`, or `clientSideComponentId`.
+: The Client Side Component Id (GUID) of the application customizer. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-s, --scope [scope]`
 : Scope of the application customizer. Allowed values: `Site`, `Web`, `All`. Defaults to `All`.
@@ -125,7 +125,7 @@ m365 spo applicationcustomizer get --title "Some customizer" --webUrl https://co
   <TabItem value="Markdown">
 
   ```md
-  # spo applicationcustomizer get --title "Some customizer" --webUrl "https://nachan365.sharepoint.com/sites/spdemo" --scope "Web"
+  # spo applicationcustomizer get --title "Some customizer" --webUrl "https://contoso.sharepoint.com/sites/sales" --scope "Web"
 
   Date: 3/6/2023
 
@@ -156,4 +156,3 @@ m365 spo applicationcustomizer get --title "Some customizer" --webUrl https://co
 
   </TabItem>
 </Tabs>
-
