--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo applicationcustomizer list
 
-Get a list of application customizers that are added to a site.
+Get a list of application customizers that are added to a site
 
 ## Usage
 
@@ -19,7 +19,7 @@ m365 spo applicationcustomizer list [options]
 : The url of the site.
 
 `-s, --scope [scope]`
-: Scope of the application customizers. Allowed values `Site`, `Web`, `All`. Defaults to `All`
+: Scope of the application customizers. Allowed values `Site`, `Web`, `All`. Defaults to `All`.
 ```
 
 <Global />
@@ -120,4 +120,3 @@ m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/site
 
   </TabItem>
 </Tabs>
-
