--- a/docs/docs/cmd/spo/apppage/apppage-set.mdx
+++ b/docs/docs/cmd/spo/apppage/apppage-set.mdx
@@ -14,21 +14,25 @@ m365 spo apppage set [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site where the page to update is located
+: The URL of the site where the page to update is located.
 
 `-n, --name <name>`
-: The name of the page to be updated, eg. page.aspx
+: The name of the page to be updated, eg. page.aspx.
 
 `-d, --webPartData <webPartData>`
-: JSON string of the web part to update on the page
+: JSON string of the web part to update on the page.
 ```
 
 <Global />
 
 ## Examples
 
-Updates the single-part app page located in a site with url https://contoso.sharepoint.com. Web part data is stored in the `$webPartData` variable
+Updates the single-part app page located in a specified site. Web part data is stored in the `$webPartData` variable.
 
 ```sh
 m365 spo apppage set --webUrl "https://contoso.sharepoint.com" --name "Contoso.aspx" --webPartData $webPartData
 ```
+
+## Response
+
+The command won't return a response on success.
